--- a/index.html
+++ b/index.html
@@ -5,24 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bellefair&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100&display=swap" rel="stylesheet">
     <title>Space-Tourism</title>
 </head>
 <body>
-    <!-- NAVBAR -->
-    <section id="navbar" class="py-12 h-screen">
-        <div class="container mx-auto flex justify-between items-center">
-            <!-- LOGO -->
-            <div>
-                <img src="./assets/shared/logo.svg" alt="">
+
+    <!-- HERO -->
+    <section id="hero">
+
+        <!-- NAVBAR -->
+        <section id="navbar" class="py-8 px-3">
+            <div class="container mx-auto flex justify-between items-center">
+                <!-- LOGO -->
+                <div>
+                    <img src="./assets/shared/logo.svg" alt="" class="h-9">
+                </div>
+                <!-- MENU -->
+                <div class="backdrop-blur-md text-white bg-white/20 py-8 px-10 hidden md:flex md:space-x-10 lg:space-x-20">
+                    <a href="#" class="md:text-md lg:text-lg"><span class="font-bold">00</span> HOME</a>
+                    <a href="#" class="md:text-md text-lg"><span class="font-bold">01</span> DESTINATION</a>
+                    <a href="#" class="md:text-md text-lg"><span class="font-bold">02</span> CREW</a>
+                    <a href="#" class="md:text-md text-lg"><span class="font-bold">03</span> TECHNOLOGY</a>
+                </div>
+                <!-- HAMBURGER FOR MOBILE -->
+                <div class="md:hidden">
+                    <p class="text-white">HAM</p>
+                </div>
             </div>
-            <!-- MENU -->
-            <div class="backdrop-blur-3xl text-white bg-white/20 py-10 px-10 flex space-x-20">
-                <a href="#" class="text-lg"><span class="font-bold">00</span> HOME</a>
-                <a href="#" class="text-lg"><span class="font-bold">01</span> DESTINATION</a>
-                <a href="#" class="text-lg"><span class="font-bold">02</span> CREW</a>
-                <a href="#" class="text-lg"><span class="font-bold">03</span> TECHNOLOGY</a>
+        </section>
+
+        <!-- MAIN -->
+        <section id="main" class="py-32 lg:py-36 px-3">
+            <div class="container mx-auto text-white flex flex-col lg:flex-row justify-between items-center lg:items-end lg:px-10">
+                <!-- LEFT -->
+                <div class="w-full lg:w-1/3 text-center lg:text-left">
+                    <p class="font-Barlow text-lg md:text-2xl lg:text-4xl">SO, YOU WANT TO TRAVEL TO</p>
+                    <h1 class="font-belle text-4xl md:text-7xl lg:text-9xl py-5 lg:py-10">SPACE</h1>
+                    <p class="font-Barlow text-md md:text-lg lg:text-xl">Let’s face it; if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world experience!</p>
+                </div>
+
+                <!-- RIGHT -->
+                <div class="w-full lg:w-1/3 py-28 lg:py-0 flex items-center justify-center">
+                    <div>
+                        <h1 class="bg-white text-black h-40 lg:h-52 w-40 lg:w-52 text-center rounded-full flex items-center justify-center font-belle text-3xl lg:text-5xl hover:outline hover:outline-5 duration-1000 transition-all ease-in-out hover:outline-[#979797]">Explore</h1>
+                    </div>
+                </div>
             </div>
-        </div>
+        </section>
     </section>
+
+
+
+
 </body>
 </html>
