--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
         <section id="navbar" class="py-8 px-3">
             <div class="container mx-auto flex justify-between items-center">
                 <!-- LOGO -->
-                <div>
+                <div class="fixed top-10">
                     <img src="./assets/shared/logo.svg" alt="" class="h-9">
                 </div>
                 <!-- MENU -->
-                <div class="backdrop-blur-md text-white bg-white/20 py-8 px-10 hidden md:flex md:space-x-10 lg:space-x-20">
-                    <a href="#" class="md:text-md lg:text-lg"><span class="font-bold">00</span> HOME</a>
-                    <a href="#" class="md:text-md text-lg"><span class="font-bold">01</span> DESTINATION</a>
-                    <a href="#" class="md:text-md text-lg"><span class="font-bold">02</span> CREW</a>
-                    <a href="#" class="md:text-md text-lg"><span class="font-bold">03</span> TECHNOLOGY</a>
+                <div class=" fixed top-5 right-0 backdrop-blur-md text-white bg-white/20  px-20 hidden md:flex md:space-x-10 lg:space-x-20">
+                    <a href="#" class="md:text-md lg:text-lg py-5 active-link"><span class="font-bold">00</span> HOME</a>
+                    <a href="#" class="md:text-md lg:text-lg py-5"><span class="font-bold">01</span> DESTINATION</a>
+                    <a href="#" class="md:text-md lg:text-lg py-5"><span class="font-bold">02</span> CREW</a>
+                    <a href="#" class="md:text-md lg:text-lg py-5"><span class="font-bold">03</span> TECHNOLOGY</a>
                 </div>
                 <!-- HAMBURGER FOR MOBILE -->
-                <div class="md:hidden">
+                <div class="md:hidden fixed right-5 top-10">
                     <p class="text-white">HAM</p>
                 </div>
             </div>
         </section>
 
         <!-- MAIN -->
-        <section id="main" class="py-32 lg:py-36 px-3">
+        <section id="main" class="py-10 md:py-32 lg:py-36 px-3">
             <div class="container mx-auto text-white flex flex-col lg:flex-row justify-between items-center lg:items-end lg:px-10">
                 <!-- LEFT -->
                 <div class="w-full lg:w-1/3 text-center lg:text-left">
@@ -51,7 +51,7 @@
                 </div>
 
                 <!-- RIGHT -->
-                <div class="w-full lg:w-1/3 py-28 lg:py-0 flex items-center justify-center">
+                <div class="w-full lg:w-1/3 py-24 md:py-28 lg:py-0 flex items-center justify-center">
                     <div>
                         <h1 class="bg-white text-black h-40 lg:h-52 w-40 lg:w-52 text-center rounded-full flex items-center justify-center font-belle text-3xl lg:text-5xl hover:outline hover:outline-5 duration-1000 transition-all ease-in-out hover:outline-[#979797]">Explore</h1>
                     </div>
@@ -61,6 +61,64 @@
     </section>
 
 
+    <!-- DESTINATION -->
+    <section id="destination" class="px-3 pt-28 pb-5">
+        <div class="container mx-auto text-white px-16">
+            <h1 class="lg:text-3xl font-Barlow tracking-widest"><span class="text-gray-500 font-bold">01</span> Pick your destination</h1>
+
+            <!-- LEFT AND RIGHT -->
+            <div class="flex flex-col lg:flex-row pt-14 lg:pt-28">
+                <!-- LEFT -->
+                <div class="w-full lg:w-1/2 pb-8 lg:pb-0 flex justify-center">
+                    <img src="./assets/destination/image-moon.png" alt="" class="md:h-80 lg:h-84">
+                </div>
+
+                <!-- RIGHT -->
+                <div class="w-full lg:w-1/2 flex flex-col  items-center">
+                    <!-- BUTTONS -->
+                    <div class="flex space-x-5">
+                        <button class="pb-2 active-link">MOON</button>
+                        <button class="pb-2">MARS</button>
+                        <button class="pb-2">EUROPA</button>
+                        <button class="pb-2">TITAN</button>
+                    </div>
+
+                    <!-- CONTENT -->
+                    <div>
+                        <!-- MOON -->
+                        <div class="flex flex-col items-center">
+                            <h1 class="text-4xl md:text-6xl lg:text-8xl font-belle py-5">MOON</h1>
+                            <p class="max-w-md text-center lg:text-left">See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.</p>
+                            <div class="max-w-md border-b border-gray-600 pt-5"></div>
+                            <!-- DISTANCE -->
+                            <div class="max-w-md flex flex-col md:flex-row space-y-5 md:space-x-20 md:space-y-0pt-14 font-belle">
+                                <!-- FIRST -->
+                                <div class="text-center md:text-left">
+                                    <div>
+                                        <p class="text-sm text-[#D0D6F9]">AVG. DISTANCE</p>
+                                    </div>
+                                    <div>
+                                        <p class="text-3xl">384,400 km</p>
+                                    </div>
+                                </div>
+
+                                <!-- SECOND -->
+                                <div class="text-center md:text-left">
+                                    <div>
+                                        <p class="text-sm text-[#D0D6F9]">EST. TRAVEL TIME</p>
+                                    </div>
+                                    <div>
+                                        <p class="text-3xl">3 DAYS</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 </body>
