worked on destination section

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container mx-auto text-white px-16">
             <h1 class="lg:text-3xl font-Barlow tracking-widest"><span class="text-gray-500 font-bold">01</span> Pick your destination</h1>
 
-            <!-- LEFT AND RIGHT -->
+            <!-- MOON -->
             <div class="flex flex-col lg:flex-row pt-14 lg:pt-28">
                 <!-- LEFT -->
                 <div class="w-full lg:w-1/2 pb-8 lg:pb-0 flex justify-center">
@@ -85,13 +85,12 @@
 
                     <!-- CONTENT -->
                     <div>
-                        <!-- MOON -->
                         <div class="flex flex-col items-center">
                             <h1 class="text-4xl md:text-6xl lg:text-8xl font-belle py-5">MOON</h1>
                             <p class="max-w-md text-center lg:text-left">See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.</p>
-                            <div class="max-w-md border-b border-gray-600 pt-5"></div>
+                            <div class="w-96 border-b  border-gray-600 pt-5"></div>
                             <!-- DISTANCE -->
-                            <div class="max-w-md flex flex-col md:flex-row space-y-5 md:space-x-20 md:space-y-0pt-14 font-belle">
+                            <div class="max-w-md flex flex-col md:flex-row space-y-5 md:space-x-20 md:space-y-0 pt-5 font-belle">
                                 <!-- FIRST -->
                                 <div class="text-center md:text-left">
                                     <div>
@@ -117,6 +116,167 @@
 
                 </div>
             </div>
+
+
+            <!-- MARS -->
+            <div class="hidden flex flex-col lg:flex-row pt-14 lg:pt-28">
+                <!-- LEFT -->
+                <div class="w-full lg:w-1/2 pb-8 lg:pb-0 flex justify-center">
+                    <img src="./assets/destination/image-mars.png" alt="" class="md:h-80 lg:h-84">
+                </div>
+
+                <!-- RIGHT -->
+                <div class="w-full lg:w-1/2 flex flex-col  items-center">
+                    <!-- BUTTONS -->
+                    <div class="flex space-x-5">
+                        <button class="pb-2">MOON</button>
+                        <button class="pb-2 active-link">MARS</button>
+                        <button class="pb-2">EUROPA</button>
+                        <button class="pb-2">TITAN</button>
+                    </div>
+
+                    <!-- CONTENT -->
+                    <div>
+                        <div class="flex flex-col items-center">
+                            <h1 class="text-4xl md:text-6xl lg:text-8xl font-belle py-5">MARS</h1>
+                            <p class="max-w-md text-center lg:text-left">Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons, the tallest planetary mountain in our solar system. It’s two and a half times the size of Everest!</p>
+                            <div class="w-96 border-b  border-gray-600 pt-5"></div>
+                            <!-- DISTANCE -->
+                            <div class="max-w-md flex flex-col md:flex-row space-y-5 md:space-x-20 md:space-y-0 pt-5 font-belle">
+                                <!-- FIRST -->
+                                <div class="text-center md:text-left">
+                                    <div>
+                                        <p class="text-sm text-[#D0D6F9]">AVG. DISTANCE</p>
+                                    </div>
+                                    <div>
+                                        <p class="text-3xl">225 MIL. km</p>
+                                    </div>
+                                </div>
+
+                                <!-- SECOND -->
+                                <div class="text-center md:text-left">
+                                    <div>
+                                        <p class="text-sm text-[#D0D6F9]">EST. TRAVEL TIME</p>
+                                    </div>
+                                    <div>
+                                        <p class="text-3xl">9 MONTHS</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+
+
+            <!-- EUROPA -->
+            <div class=" hidden flex flex-col lg:flex-row pt-14 lg:pt-28">
+                <!-- LEFT -->
+                <div class="w-full lg:w-1/2 pb-8 lg:pb-0 flex justify-center">
+                    <img src="./assets/destination/image-europa.png" alt="" class="md:h-80 lg:h-84">
+                </div>
+
+                <!-- RIGHT -->
+                <div class="w-full lg:w-1/2 flex flex-col  items-center">
+                    <!-- BUTTONS -->
+                    <div class="flex space-x-5">
+                        <button class="pb-2">MOON</button>
+                        <button class="pb-2">MARS</button>
+                        <button class="pb-2 active-link">EUROPA</button>
+                        <button class="pb-2">TITAN</button>
+                    </div>
+
+                    <!-- CONTENT -->
+                    <div>
+                        <div class="flex flex-col items-center">
+                            <h1 class="text-4xl md:text-6xl lg:text-8xl font-belle py-5">EUROPA</h1>
+                            <p class="max-w-md text-center lg:text-left">The smallest of the four Galilean moons orbiting Jupiter, Europa is a winter lover’s dream. With an icy surface, it’s perfect for a bit of ice skating, curling, hockey, or simple relaxation in your snug wintery cabin.</p>
+                            <div class="w-96 border-b  border-gray-600 pt-5"></div>
+                            <!-- DISTANCE -->
+                            <div class="max-w-md flex flex-col md:flex-row space-y-5 md:space-x-20 md:space-y-0 pt-5 font-belle">
+                                <!-- FIRST -->
+                                <div class="text-center md:text-left">
+                                    <div>
+                                        <p class="text-sm text-[#D0D6F9]">AVG. DISTANCE</p>
+                                    </div>
+                                    <div>
+                                        <p class="text-3xl">628 MIL. km</p>
+                                    </div>
+                                </div>
+
+                                <!-- SECOND -->
+                                <div class="text-center md:text-left">
+                                    <div>
+                                        <p class="text-sm text-[#D0D6F9]">EST. TRAVEL TIME</p>
+                                    </div>
+                                    <div>
+                                        <p class="text-3xl">3 years</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+
+
+            <!-- TITAN -->
+            <div class="hidden flex flex-col lg:flex-row pt-14 lg:pt-28">
+                <!-- LEFT -->
+                <div class="w-full lg:w-1/2 pb-8 lg:pb-0 flex justify-center">
+                    <img src="./assets/destination/image-titan.png" alt="" class="md:h-80 lg:h-84">
+                </div>
+
+                <!-- RIGHT -->
+                <div class="w-full lg:w-1/2 flex flex-col  items-center">
+                    <!-- BUTTONS -->
+                    <div class="flex space-x-5">
+                        <button class="pb-2">MOON</button>
+                        <button class="pb-2">MARS</button>
+                        <button class="pb-2">EUROPA</button>
+                        <button class="pb-2 active-link">TITAN</button>
+                    </div>
+
+                    <!-- CONTENT -->
+                    <div>
+                        <div class="flex flex-col items-center">
+                            <h1 class="text-4xl md:text-6xl lg:text-8xl font-belle py-5">TITAN</h1>
+                            <p class="max-w-md text-center lg:text-left">The only moon known to have a dense atmosphere other than Earth, Titan is a home away from home (just a few hundred degrees colder!). As a bonus, you get striking views of the Rings of Saturn.</p>
+                            <div class="w-96 border-b  border-gray-600 pt-5"></div>
+                            <!-- DISTANCE -->
+                            <div class="max-w-md flex flex-col md:flex-row space-y-5 md:space-x-20 md:space-y-0 pt-5 font-belle">
+                                <!-- FIRST -->
+                                <div class="text-center md:text-left">
+                                    <div>
+                                        <p class="text-sm text-[#D0D6F9]">AVG. DISTANCE</p>
+                                    </div>
+                                    <div>
+                                        <p class="text-3xl">1.6 BIL. km</p>
+                                    </div>
+                                </div>
+
+                                <!-- SECOND -->
+                                <div class="text-center md:text-left">
+                                    <div>
+                                        <p class="text-sm text-[#D0D6F9]">EST. TRAVEL TIME</p>
+                                    </div>
+                                    <div>
+                                        <p class="text-3xl">7 years</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+
+            
         </div>
     </section>
 
