worked on crew section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,7 +29,7 @@
                 <!-- MENU -->
                 <div class=" fixed top-5 right-0 backdrop-blur-md text-white bg-white/20  px-20 hidden md:flex md:space-x-10 lg:space-x-20">
                     <a href="#" class="md:text-md lg:text-lg py-5 active-link"><span class="font-bold">00</span> HOME</a>
-                    <a href="#" class="md:text-md lg:text-lg py-5"><span class="font-bold">01</span> DESTINATION</a>
+                    <a href="#destination" class="md:text-md lg:text-lg py-5"><span class="font-bold">01</span> DESTINATION</a>
                     <a href="#" class="md:text-md lg:text-lg py-5"><span class="font-bold">02</span> CREW</a>
                     <a href="#" class="md:text-md lg:text-lg py-5"><span class="font-bold">03</span> TECHNOLOGY</a>
                 </div>
@@ -62,7 +62,7 @@
 
 
     <!-- DESTINATION -->
-    <section id="destination" class="px-3 pt-28 pb-5">
+    <section id="destination" class="px-3 pt-32 pb-20">
         <div class="container mx-auto text-white px-16">
             <h1 class="lg:text-3xl font-Barlow tracking-widest"><span class="text-gray-500 font-bold">01</span> Pick your destination</h1>
 
@@ -277,6 +277,48 @@
 
 
             
+        </div>
+    </section>
+
+
+
+
+    <!-- CREW -->
+    <section id="crew" class="px-3 pt-24">
+        <div class="container mx-auto text-white px-16">
+            <h1 class="lg:text-3xl font-Barlow tracking-widest"><span class="text-gray-500 font-bold">02</span> Meet your crew</h1>
+
+            <!-- CREW -->
+            <div>
+                <!-- CREW - 01  -->
+                <div class="flex flex-col-reverse md:flex-col lg:flex-row items-center py-5">
+                    <!-- left -->
+                    <div class="w-full lg:w-1/2 flex flex-col items-center lg:items-start md:pt-14 lg:pt-0">
+                        <h2 class="font-belle text-xl md:text-2xl lg:text-3xl tracking-wider text-gray-400">Commander</h2>
+                        <h1 class="font-belle text-3xl md:text-5xl lg:text-7xl pt-2 md:pt-4 pb-4 md:pb-8">Douglas Hurley</h1>
+                        <p class="font-Barlow lg:text-xl max-w-sm text-center lg:text-left">Douglas Gerald Hurley is an American engineer, former Marine Corps pilot and former NASA astronaut. He launched into space for the third time as commander of Crew Dragon Demo-2.</p>
+
+                        <div class="dots hidden md:flex flex-row space-x-5 pt-10 md:pt-20">
+                            <button class="dot-1 h-3 w-3 bg-white rounded-full active"></button>
+                            <button class="dot-2 h-3 w-3 bg-gray-600 rounded-full active"></button>
+                            <button class="dot-3 h-3 w-3 bg-gray-600 rounded-full active"></button>
+                            <button class="dot-4 h-3 w-3 bg-gray-600 rounded-full active"></button>
+                        </div>
+                    </div>
+
+                    <!-- right -->
+                    <div class="w-full lg:w-1/2 py-5 md:py-10 lg:py-0 flex flex-col items-center justify-center">
+                        <img src="./assets/crew/image-douglas-hurley.png" alt="" class="h-[300px] md:h-[500px] lg:h-[600px]">
+                        <!-- DOTS -->
+                        <div class="dots md:hidden flex flex-row space-x-5 pt-10 md:pt-20">
+                            <button class="dot-1 h-3 w-3 bg-white rounded-full active"></button>
+                            <button class="dot-2 h-3 w-3 bg-gray-600 rounded-full active"></button>
+                            <button class="dot-3 h-3 w-3 bg-gray-600 rounded-full active"></button>
+                            <button class="dot-4 h-3 w-3 bg-gray-600 rounded-full active"></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
