fixed line in destination section

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <div class="flex flex-col items-center">
                             <h1 class="text-4xl md:text-6xl lg:text-8xl font-belle py-5">MOON</h1>
                             <p class="max-w-md text-center lg:text-left">See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.</p>
-                            <div class="w-96 border-b  border-gray-600 pt-5"></div>
+                            <div class="w-full border-b  border-gray-600 pt-5"></div>
                             <!-- DISTANCE -->
                             <div class="max-w-md flex flex-col md:flex-row space-y-5 md:space-x-20 md:space-y-0 pt-5 font-belle">
                                 <!-- FIRST -->
@@ -290,6 +290,7 @@
 
             <!-- CREW -->
             <div>
+
                 <!-- CREW - 01  -->
                 <div class="flex flex-col-reverse md:flex-col lg:flex-row items-center py-5">
                     <!-- left -->
