--- a/index.html
+++ b/index.html
@@ -324,5 +324,48 @@
     </section>
 
 
+
+
+
+
+
+    <!-- TECHNOLOGY -->
+    <section id="technology" class="px-3 pt-16">
+        <div class="container mx-auto text-white px-16">
+            <h1 class="lg:text-3xl font-Barlow tracking-widest"><span class="text-gray-500 font-bold">02</span> SPACE LAUNCH 101</h1>
+
+            <!-- Section -->
+            <div class="py-10">
+                <!-- SECTION - 1 -->
+                <div class="flex flex-col-reverse lg:flex-row justify-between items-center">
+                    <!-- left -->
+                    <div class="flex flex-col lg:flex-row items-center lg:space-x-10">
+                        <!-- NUMS -->
+                        <div class="flex flex-row lg:flex-col space-x-10 lg:space-x-0 space-y-0 lg:space-y-10 py-5 lg:py-0">
+                            <button class="bg-white h-10 md:h-14 w-10 md:w-14 rounded-full text-black flex items-center justify-center">1</button>
+                            <button class="border-2 border-gray-500 h-10 md:h-14 w-10 md:w-14 rounded-full  flex items-center justify-center">2</button>
+                            <button class="border-2 border-gray-500 h-10 md:h-14 w-10 md:w-14 rounded-full flex items-center justify-center">3</button>
+                        </div>
+
+                        <!-- Content -->
+                        <div class="w-full lg:max-w-lg flex flex-col items-center lg:items-start">
+                            <p class="font-Barlow lg:text-lg">THE TERMINOLOGY…</p>
+                            <h1 class="font-belle lg:text-6xl py-5">LAUNCH VEHICLE</h1>
+                            <p class="font-Barlow lg:text-xl text-center lg:text-left">A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a payload from Earth's surface to space, usually to Earth orbit or beyond. Our WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, it's quite an awe-inspiring sight on the launch pad!</p>
+                        </div>
+                    </div>
+
+                    <!-- right -->
+                    <div>
+                        <img src="./assets/technology/image-launch-vehicle-portrait.jpg" alt="" class="hidden lg:block">
+
+                        <img src="./assets/technology/image-launch-vehicle-landscape.jpg" alt="" class="block lg:hidden">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 </html>
