completed with basic UI

--- a/index.html
+++ b/index.html
@@ -362,6 +362,60 @@
                         <img src="./assets/technology/image-launch-vehicle-landscape.jpg" alt="" class="block lg:hidden">
                     </div>
                 </div>
+
+                <!-- SECTION - 2 -->
+                <div class="hidden flex flex-col-reverse lg:flex-row justify-between items-center">
+                    <!-- left -->
+                    <div class="flex flex-col lg:flex-row items-center lg:space-x-10">
+                        <!-- NUMS -->
+                        <div class="flex flex-row lg:flex-col space-x-10 lg:space-x-0 space-y-0 lg:space-y-10 py-5 lg:py-0">
+                            <button class="border-2 border-gray-500 h-10 md:h-14 w-10 md:w-14 rounded-full  flex items-center justify-center">1</button>
+                            <button class="bg-white h-10 md:h-14 w-10 md:w-14 rounded-full text-black flex items-center justify-center">2</button>
+                            <button class="border-2 border-gray-500 h-10 md:h-14 w-10 md:w-14 rounded-full flex items-center justify-center">3</button>
+                        </div>
+
+                        <!-- Content -->
+                        <div class="w-full lg:max-w-lg flex flex-col items-center lg:items-start">
+                            <p class="font-Barlow lg:text-lg">THE TERMINOLOGY…</p>
+                            <h1 class="font-belle lg:text-6xl py-5">SPACEPORT</h1>
+                            <p class="font-Barlow lg:text-xl text-center lg:text-left">A spaceport or cosmodrome is a site for launching (or receiving) spacecraft, by analogy to the seaport for ships or airport for aircraft. Based in the famous Cape Canaveral, our spaceport is ideally situated to take advantage of the Earth’s rotation for launch.</p>
+                        </div>
+                    </div>
+
+                    <!-- right -->
+                    <div>
+                        <img src="./assets/technology/image-spaceport-portrait.jpg" alt="" class="hidden lg:block">
+
+                        <img src="./assets/technology/image-spaceport-landscape.jpg" alt="" class="block lg:hidden">
+                    </div>
+                </div>
+
+                <!-- SECTION - 3 -->
+                <div class="hidden flex flex-col-reverse lg:flex-row justify-between items-center">
+                    <!-- left -->
+                    <div class="flex flex-col lg:flex-row items-center lg:space-x-10">
+                        <!-- NUMS -->
+                        <div class="flex flex-row lg:flex-col space-x-10 lg:space-x-0 space-y-0 lg:space-y-10 py-5 lg:py-0">
+                            <button class="border-2 border-gray-500 h-10 md:h-14 w-10 md:w-14 rounded-full  flex items-center justify-center">1</button>
+                            <button class="border-2 border-gray-500 h-10 md:h-14 w-10 md:w-14 rounded-full  flex items-center justify-center">2</button>
+                            <button class="bg-white h-10 md:h-14 w-10 md:w-14 rounded-full text-black flex items-center justify-center">3</button>
+                        </div>
+
+                        <!-- Content -->
+                        <div class="w-full lg:max-w-lg flex flex-col items-center lg:items-start">
+                            <p class="font-Barlow lg:text-lg">THE TERMINOLOGY…</p>
+                            <h1 class="font-belle lg:text-6xl py-5">SPACE CAPSULE</h1>
+                            <p class="font-Barlow lg:text-xl text-center lg:text-left">A space capsule is an often-crewed spacecraft that uses a blunt-body reentry capsule to reenter the Earth's atmosphere without wings. Our capsule is where you'll spend your time during the flight. It includes a space gym, cinema, and plenty of other activities to keep you entertained.</p>
+                        </div>
+                    </div>
+
+                    <!-- right -->
+                    <div>
+                        <img src="./assets/technology/image-space-capsule-portrait.jpg" alt="" class="hidden lg:block">
+
+                        <img src="./assets/technology/image-space-capsule-landscape.jpg" alt="" class="block lg:hidden">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
